force-app/main/default/objects/Error_Handling_Configuration__mdt.object
<CustomObject>
    <label>Error Handling Configuration</label>
    <pluralLabel>Error Handling Configurations</pluralLabel>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_on_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email on Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logger__c</fullName>
        <label>Logger</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Object Logger</fullName>
                    <default>true</default>
                    <label>Object Logger</label>
                </value>
                <value>
                    <fullName>Debug Logger</fullName>
                </value>
                <value>
                    <fullName>No Logs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Log_Level__c</fullName>
        <label>Log Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                    <label>Info - Info, Error</label>
                </value>
                <value>
                    <fullName>Fine</fullName>
                    <label>Fine - Info,Warning,Error</label>
                </value>
                <value>
                    <fullName>Finest</fullName>
                    <label>Finest - Debug, Info, Warning, Error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>